--- a/index.html
+++ b/index.html
@@ -1,27 +1,69 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SpellTree</title>
-</head>
-<body>
-    <div>
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/fireball_spell_elden_ring_wiki_guide_200px.png" alt="Fireball">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/ignite_spell_elden_ring_wiki_guide_200px.png" alt="Ignite">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/bolide_spell_elden_ring_wiki_guide_200px.png" alt="Great Fireball">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/fire_wave_spell_elden_ring_wiki_guide_200px.png" alt="Fire Wave">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/firestorm_spell_elden_ring_wiki_guide_200px.png" alt="Firestorm">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/magical_pillar_spell_elden_ring_wiki_guide_200px.png" alt="Magic Pillar">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/magic_bolt_spell_elden_ring_wiki_guide_200px.png" alt="Magic Bolt">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/magic_eruption_spell_elden_ring_wiki_guide_200px.png" alt="Magic Eruption">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/mana_wave_spell_elden_ring_wiki_guide_200px.png" alt="Mana Wave">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_fireball_spell_elden_ring_wiki_guide_200px.png" alt="Glintstone Fireball">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/rock_blade_spell_elden_ring_wiki_guide_200px.png" alt="Rock Blade">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/spell_of_strengthen_spell_elden_ring_wiki_guide_200px.png" alt="Spell of Strengthen">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/force_spell_elden_ring_wiki_guide_200px.png" alt="Force">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/flame_blast_spell_elden_ring_wiki_guide_200px.png" alt="Flame Blast">
-        <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/fireball_spell_elden_ring_wiki_guide_200px.png" alt="Flame of Frenzy">
-    </div>
-</body>
-</html>
+<div class="spell">
+  <h2>Carian Greatsword (Royal)</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/carian_greatsword_(royal)_sorcery_elden_ring_wiki_guide_200px.png" alt="Carian Greatsword (Royal)">
+  <p><strong>Requisitos:</strong> INT 24</p>
+  <p>Versão aprimorada do Carian Greatsword, usada pela realeza mágica. Desfere golpes com maior alcance e poder.</p>
+</div>
+
+<div class="spell">
+  <h2>Glintstone Icecrag</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/glintstone_icecrag_sorcery_elden_ring_wiki_guide_200px.png" alt="Glintstone Icecrag">
+  <p><strong>Requisitos:</strong> INT 15</p>
+  <p>Projeta fragmentos mágicos de gelo em linha reta. Causa dano mágico e efeito de congelamento.</p>
+</div>
+
+<div class="spell">
+  <h2>Freezing Mist</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/freezing_mist_sorcery_elden_ring_wiki_guide_200px.png" alt="Freezing Mist">
+  <p><strong>Requisitos:</strong> INT 21</p>
+  <p>Cria uma névoa gelada que congela os inimigos com o tempo. Excelente para controle de área.</p>
+</div>
+
+<div class="spell">
+  <h2>Zamor Ice Storm</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/zamor_ice_storm_sorcery_elden_ring_wiki_guide_200px.png" alt="Zamor Ice Storm">
+  <p><strong>Requisitos:</strong> INT 36</p>
+  <p>Gera uma tempestade de gelo ao redor do conjurador, causando dano contínuo e congelamento.</p>
+</div>
+
+<div class="spell">
+  <h2>Shattering Crystal</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/shattering_crystal_sorcery_elden_ring_wiki_guide_200px.png" alt="Shattering Crystal">
+  <p><strong>Requisitos:</strong> INT 27</p>
+  <p>Explode uma gema mágica à frente do conjurador, espalhando estilhaços de cristal em área.</p>
+</div>
+
+<div class="spell">
+  <h2>Crystal Barrage</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_barrage_sorcery_elden_ring_wiki_guide_200px.png" alt="Crystal Barrage">
+  <p><strong>Requisitos:</strong> INT 23</p>
+  <p>Dispara uma chuva de pequenos fragmentos de cristal. Dano rápido e repetido a curta distância.</p>
+</div>
+
+<div class="spell">
+  <h2>Crystal Burst</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_burst_sorcery_elden_ring_wiki_guide_200px.png" alt="Crystal Burst">
+  <p><strong>Requisitos:</strong> INT 18</p>
+  <p>Lança um grupo de estilhaços de cristal que se espalham em leque. Ideal para múltiplos inimigos.</p>
+</div>
+
+<div class="spell">
+  <h2>Crystal Release</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_release_sorcery_elden_ring_wiki_guide_200px.png" alt="Crystal Release">
+  <p><strong>Requisitos:</strong> INT 41</p>
+  <p>Explode cristais ao redor do conjurador em todas as direções. Grande área de dano mágico.</p>
+</div>
+
+<div class="spell">
+  <h2>Crystal Torrent</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/crystal_torrent_sorcery_elden_ring_wiki_guide_200px.png" alt="Crystal Torrent">
+  <p><strong>Requisitos:</strong> INT 47</p>
+  <p>Libera um fluxo contínuo de cristais em linha reta. Excelente para derreter defesas inimigas.</p>
+</div>
+
+<div class="spell">
+  <h2>Terra Magicus</h2>
+  <img src="https://eldenring.wiki.fextralife.com/file/Elden-Ring/terra_magica_sorcery_elden_ring_wiki_guide_200px.png" alt="Terra Magicus">
+  <p><strong>Requisitos:</strong> INT 20</p>
+  <p>Cria um círculo mágico no chão que aumenta o poder mágico de quem estiver dentro. Buff poderoso para magos.</p>
+</div>
